--- a/src/containers/onboarding/step-arcs/step-arcs-styles.module.scss
+++ b/src/containers/onboarding/step-arcs/step-arcs-styles.module.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: -4px;
   left: -4px;
-  z-index: $send-to-back;
+  z-index: $default-z-index;
 
   .stepsArc {
     stroke: $dark-text;
