--- a/src/containers/onboarding/tooltip/onboarding-tooltip-styles.module.scss
+++ b/src/containers/onboarding/tooltip/onboarding-tooltip-styles.module.scss
@@ -4,6 +4,7 @@
 
 .tooltipPlacement {
   position: absolute;
+  z-index: $over-all;
 }
 
 .tooltipContainer {
